# docker-homelab

./: .gitignore  LICENSE  Makefile  README.md  dns.yml  minecraft.md  minecraft.yml  minecraft.yml-backup  monitoring.yml  restarting.py
config/caddy/: Caddyfile
config/prometheus/: alert.rules  prometheus.yml
config/restic-hooks/: README.md
config/sonnen-exporter/: config.toml  dump.txt
config/telegraf/: telegraf.conf
imagesrc/sonnen-exporter/: Dockerfile  README.md
imagesrc/sonnen-exporter/sonnen-exporter/: .gitignore  Cargo.toml  LICENSE  README.md
imagesrc/sonnen-exporter/sonnen-exporter/etc/: config.toml
imagesrc/sonnen-exporter/sonnen-exporter/src/: config.rs  handlers.rs  main.rs  sonnen_reader.rs
imagesrc/sonnen-python/: Dockerfile  sonnen_exporter.py
